--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-09  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>
+
+	* objs/s.obj: Added this model for the Sh Logo.
+
 2004-02-13  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>
 
 	* Makefile (dist): Makefile improvements.
