Small Makefile and ChangeLog fixes, for 0.7.1 release
git-svn-id: svn://svn.code.sf.net/p/libsh/code/shmedia/trunk@1043 afdca40c-03d6-0310-8ede-e9f093b21075

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-06-07  Sylvain Vasseur  <sfvvasse@cgl.uwaterloo.ca>
+
+	* horizonmaps/: Recomputed some horizon maps with smaller bumps.
+
+2004-05-31  Sylvain Vasseur  <sfvvasse@cgl.uwaterloo.ca>
+
+	* horizonmaps/: Added some texture files used for horizon mapping.
+
 2004-03-24  Michael McCool  <mmccool@uwaterloo.ca>
 
 	* bumpmaps/: Added a simple bump map and an associated normal map
