Added SIGGRAPH 04 logo-ish thing
git-svn-id: svn://svn.code.sf.net/p/libsh/code/shmedia/trunk@1198 afdca40c-03d6-0310-8ede-e9f093b21075

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-13  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>
+
+	* objs/sg04.obj: Added SIGGRAPH 2004 logo.
+
 2004-06-07  Sylvain Vasseur  <sfvvasse@cgl.uwaterloo.ca>
 
 	* horizonmaps/: Recomputed some horizon maps with smaller bumps.
